--- a/Mvc4MusicStore/Mvc4MusicStore.csproj
+++ b/Mvc4MusicStore/Mvc4MusicStore.csproj
@@ -291,6 +291,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Images\Thumbs.db" />
+    <Content Include="Okta.config" />
     <None Include="Scripts\jquery-1.8.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
