--- a/Mvc4MusicStore/Web.config
+++ b/Mvc4MusicStore/Web.config
@@ -13,14 +13,12 @@
     <add name="MusicStoreEntities" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MusicStoreEntities;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|MvcMusicStore.sdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
-  <appSettings>
+  <appSettings file="Okta.config">
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="okta:ApiToken" value="" />
-    <add key="okta:ApiUrl" value="" />
   </appSettings>
 
   <system.web>
