Add example Okta.config Add more descriptive comment for the <appSettings> tag

--- a/Mvc4MusicStore/Web.config
+++ b/Mvc4MusicStore/Web.config
@@ -13,12 +13,25 @@
     <add name="MusicStoreEntities" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MusicStoreEntities;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|MvcMusicStore.sdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
+ <!--
+ NOTE:
+ While it is easier to store the Okta API Token below, you will run the risk of comitting that API token into Git if you do so.
+ To avoid storing your Okta API token in Git, copy the "Okta.config.example" file that is included in this repository to "Okta.config".
+ Then fill in the values for the okta:ApiToken and okta:ApiUrl in that file. Don't commit "Okta.config" into your Git repository!
+
+ Alternately, if you like to live dangerously, remove the "file" attribute from the <appSettings> tag below.
+ Then fill in and uncomment the "okta:" tags below.
+ -->
   <appSettings file="Okta.config">
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--
+    <add key="okta:ApiToken" value="" />
+    <add key="okta:ApiUrl" value="" />
+    -->
   </appSettings>
 
   <system.web>
